<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Flattened structure to eliminate category-induced vertical gaps -->
    <Preference
        android:icon="@drawable/baseline_description_24"
        android:key="@string/show_logcat_key"
        android:title="@string/show_log_cat"
        app:layout="@layout/setting_tile" />

    <Preference
        android:title="@string/check_for_plugin_update"
        android:key="@string/plugin_sync_key"
        android:summary="@string/plugin_sync_desc"
        android:icon="@drawable/ic_baseline_autorenew_24"
        app:layout="@layout/setting_tile" />

    <Preference
        android:title="@string/import_provider_apk"
        android:key="@string/provider_apk_import_key"
        android:summary="@string/import_provider_apk_desc"
        android:icon="@drawable/ic_baseline_add_24"
        app:layout="@layout/setting_tile" />


    <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
        android:title="@string/cloudflare_auto_solve_title"
        android:key="@string/cloudflare_auto_solve_key"
        android:summary="@string/cloudflare_auto_solve_summary"
        app:defaultValue="false"
        android:icon="@drawable/ic_baseline_cloud_24"
        app:layout="@layout/setting_tile" />

    <Preference
        android:title="@string/cloudflare_resolve_manual_title"
        android:key="@string/cloudflare_resolve_manual_key"
        android:summary="@string/cloudflare_resolve_manual_summary"
        android:icon="@drawable/ic_baseline_public_24"
        app:layout="@layout/setting_tile" />

    <Preference
        android:title="@string/clear_cookies"
        android:key="@string/clear_cookies_key"
        android:summary="@string/clear_cookies_desc"
        android:icon="@drawable/ic_baseline_warning_24"
        app:layout="@layout/setting_tile" />

</PreferenceScreen>
