<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.lagradost.quicknovel.ui.custom.HeroPreference
        android:key="hero_card"
        app:layout="@layout/setting_hero_card" />

    <com.lagradost.quicknovel.ui.custom.BentoPreference
        android:key="bento_grid"
        app:layout="@layout/setting_bento_grid" />

    <com.lagradost.quicknovel.ui.custom.SocialChipsPreference
        android:key="social_chips"
        app:layout="@layout/setting_social_chips" />

    <PreferenceCategory
        android:key="appearance"
        android:title="@string/appearance_background"
        app:allowDividerAbove="false"
        app:layout="@layout/setting_category_title">

        <Preference
            android:key="@string/background_image_key"
            android:title="@string/background_image"
            android:summary="@string/background_image_summary"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:layout="@layout/setting_tile" />

        <Preference
            android:key="@string/reset_background_key"
            android:title="@string/reset_background"
            android:summary="@string/reset_background_summary"
            android:icon="@drawable/baseline_restore_page_24"
            app:layout="@layout/setting_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSliderPreference
            android:key="@string/background_blur_key"
            android:title="@string/background_blur"
            app:valueTo="100"
            app:valueFrom="0"
            app:defaultValue="0"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:layout="@layout/setting_seekbar_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSliderPreference
            android:key="@string/background_dim_key"
            android:title="@string/background_dim"
            app:valueTo="100"
            app:valueFrom="0"
            app:defaultValue="0"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:layout="@layout/setting_seekbar_tile" />

        <Preference
            android:key="@string/theme_key"
            android:title="@string/theme"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:useSimpleSummaryProvider="true"
            app:layout="@layout/setting_tile" />

        <Preference
            android:key="@string/primary_color_key"
            android:title="@string/primary_color_settings"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:useSimpleSummaryProvider="true"
            app:layout="@layout/setting_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
            android:key="@string/reader_background_key"
            android:title="@string/reader_background"
            android:summary="@string/reader_background_summary"
            app:defaultValue="false"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:layout="@layout/setting_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
            android:key="@string/library_pinterest_bento_key"
            android:title="@string/library_pinterest_bento_title"
            android:summary="@string/library_pinterest_bento_desc"
            app:defaultValue="false"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:layout="@layout/setting_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
            android:key="library_bento_3x3"
            android:title="3×3 Bento Grid"
            android:summary="Display library as a 3-column grid with fixed-height bento cards"
            app:defaultValue="false"
            android:icon="@drawable/ic_baseline_grid_view_24"
            app:layout="@layout/setting_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
            android:key="@string/library_tactile_response_key"
            android:title="@string/library_tactile_response_title"
            android:summary="@string/library_tactile_response_desc"
            app:defaultValue="true"
            android:icon="@drawable/ic_baseline_color_lens_24"
            app:layout="@layout/setting_tile" />
    </PreferenceCategory>


    <PreferenceCategory
            android:key="general"
            android:title="@string/general"
            app:layout="@layout/setting_category_title">
        <Preference
                app:icon="@drawable/ic_baseline_star_24"
                android:key="@string/rating_format_key"
                android:title="@string/rating_format"
                app:defaultValue="star"
                app:useSimpleSummaryProvider="true"
                app:layout="@layout/setting_tile" />
        <Preference
                app:icon="@drawable/ic_baseline_grid_view_24"
                android:key="@string/download_format_key"
                android:title="@string/library_display_mode"
                app:defaultValue="list"
                app:useSimpleSummaryProvider="true"
                android:entries="@array/DownloadGridFormat"
                android:entryValues="@array/DownloadGridFormatData"
                app:layout="@layout/setting_tile" />

        <Preference
                app:icon="@drawable/ic_baseline_edit_24"
                android:key="@string/manage_data_key"
                android:title="@string/manage_data"
                android:summary="@string/manage_data_desc"
                app:layout="@layout/setting_tile" />

        <ListPreference
                android:key="@string/library_nav_style_key"
                android:title="@string/library_nav_style"
                android:summary="@string/library_nav_style_desc"
                app:defaultValue="0"
                android:entries="@array/library_nav_style_entries"
                android:entryValues="@array/library_nav_style_values"
                android:icon="@drawable/ic_baseline_edit_24"
                app:layout="@layout/setting_tile" />
        <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
                app:key="@string/auto_update_key"
                android:title="@string/show_app_updates"
                android:summary="@string/show_app_updates_desc"
                app:defaultValue="true"
                android:icon="@drawable/ic_baseline_notifications_active_24"
                app:layout="@layout/setting_tile" />

        <ListPreference
                app:key="updates_sync_interval"
                android:title="Updates Check Interval"
                android:summary="Choose how often to check for bookmarked novel updates"
                app:defaultValue="12"
                android:entries="@array/updates_interval_titles"
                android:entryValues="@array/updates_interval_values"
                android:icon="@drawable/ic_baseline_notifications_active_24"
                app:layout="@layout/setting_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
                app:key="@string/remove_external_key"
                android:title="@string/remove_bloat"
                android:summary="@string/remove_bloat_desc"
                app:defaultValue="true"
                android:icon="@drawable/ic_baseline_edit_24"
                app:layout="@layout/setting_tile" />

        <Preference
                android:title="@string/check_for_update"
                app:key="@string/manual_check_update_key"
                app:icon="@drawable/ic_baseline_system_update_24"
                app:layout="@layout/setting_tile" />
    </PreferenceCategory>

    <PreferenceCategory
            android:key="dev_only"
            android:title="@string/dev_only"
            android:summary="@string/dev_only_desc"
            app:layout="@layout/setting_category_title">

        <Preference
                android:icon="@drawable/baseline_description_24"
                android:key="@string/show_logcat_key"
                android:title="@string/show_log_cat"
                app:layout="@layout/setting_tile" />

        <Preference
                android:title="@string/check_for_plugin_update"
                app:key="@string/plugin_sync_key"
                android:summary="@string/plugin_sync_desc"
                android:icon="@drawable/ic_baseline_autorenew_24"
                app:layout="@layout/setting_tile" />

        <Preference
                android:title="@string/import_plugin"
                app:key="@string/plugin_import_key"
                android:summary="@string/import_plugin_desc"
                android:icon="@drawable/ic_baseline_add_24"
                app:layout="@layout/setting_tile" />

        <com.lagradost.quicknovel.ui.custom.ElasticSwitchPreference
                android:title="@string/cloudflare_auto_solve_title"
                app:key="@string/cloudflare_auto_solve_key"
                android:summary="@string/cloudflare_auto_solve_summary"
                app:defaultValue="false"
                android:icon="@drawable/ic_baseline_autorenew_24"
                app:layout="@layout/setting_tile" />

        <Preference
                android:title="@string/cloudflare_resolve_manual_title"
                app:key="@string/cloudflare_resolve_manual_key"
                android:summary="@string/cloudflare_resolve_manual_summary"
                android:icon="@drawable/ic_baseline_autorenew_24"
                app:layout="@layout/setting_tile" />

        <Preference
                android:title="@string/clear_cookies"
                app:key="@string/clear_cookies_key"
                android:summary="@string/clear_cookies_desc"
                android:icon="@drawable/ic_baseline_autorenew_24"
                app:layout="@layout/setting_tile" />
    </PreferenceCategory>



    <PreferenceCategory
            android:key="extra"
            android:title="@string/info"
            app:layout="@layout/setting_category_title">

        <Preference
                android:title="Github"
                android:icon="@drawable/ic_github_logo"
                app:summary="https://github.com/Shadyteal2/QuickNovel-Enhanced"
                app:layout="@layout/setting_tile">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/Shadyteal2/QuickNovel-Enhanced" />
        </Preference>

        <Preference
                android:title="Join Telegram Group"
                android:icon="@drawable/ic_baseline_language_24"
                app:summary="https://t.me/+i9MSwgeoXzU0NTE1"
                app:layout="@layout/setting_tile">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://t.me/+i9MSwgeoXzU0NTE1" />
        </Preference>

        <Preference
                android:title="Join Discord Server"
                android:icon="@drawable/ic_baseline_discord_24"
                app:summary="https://discord.gg/njMumTKvVw"
                app:layout="@layout/setting_tile">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://discord.gg/njMumTKvVw" />
        </Preference>

        <Preference
                android:title="QuickNovel Dev (LagradOst)"
                android:icon="@drawable/ic_github_logo"
                app:summary="https://github.com/LagradOst"
                app:layout="@layout/setting_tile">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/LagradOst" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
